fix layout bugs with modal

--- a/client/src/UI/Modal/Modal.module.scss
+++ b/client/src/UI/Modal/Modal.module.scss
@@ -6,6 +6,8 @@
   top: 0;
   width: 100vw;
   min-height: 100vh;
+  height: 100%;
+  overflow-y: auto;
   background: #0000008d;
   opacity: 0;
   pointer-events: none;
