--- a/client/src/widgets/App/components/App.scss
+++ b/client/src/widgets/App/components/App.scss
@@ -20,9 +20,13 @@ body {
   color: $dark;
   background: $white;
   
-  .dark {
+  &.dark {
     color: $white;
     background: $dark;
+  }
+
+  &.lock {
+    overflow: hidden;
   }
 }
 
@@ -39,3 +43,4 @@ ul {
   display: flex;
   gap: 1rem;
 }
+
